--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -82,7 +82,8 @@ projectNumber=Nome progetto CIA
 agrType=Tipo
 department=UAR
 wholeAmount=Importo totale
-totalAgreementAmount=Totale imponibile della convenzione
+totalTaxableAgreementAmount=Totale imponibile della convenzione
+totalAgreementAmount=Importo totale della convenzione
 reservedAmount=Totale impegnato
 spentAmount=Totale speso
 taxableAmount=Totale imponibile
