--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -77,7 +77,7 @@ notes=Note
 iva=IVA
 turnOver=Fatturato
 totalTurnOver=Totale fatturato
-debtNoteAmount=Note
+debtNoteAmount=Totale delle note di debito
 projectNumber=Nome progetto CIA
 agrType=Tipo
 department=UAR
