--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -160,7 +160,7 @@ err_invalidDeadline_detail=La data di scadenza non è valida (è precedente alla d
 err_instInvalidDeadline=La data di scadenza non è valida
 err_instInvalidDeadline_detail=La data di scadenza non è valida (è precedente alla data di inizio)
 
-err_instInvalidInstallmentSum="La somma dell'importo delle rate non corrisponde all'importo totale della convenzione"
+err_instInvalidInstallmentSum=La somma dell'importo delle rate non corrisponde all'importo totale della convenzione
 
 err_passwordMismatch=Le password inserite non corrispondono
 err_invalidPassword=La password inserita non è valida
