--- a/Docs/Slides/Slides.tex
+++ b/Docs/Slides/Slides.tex
@@ -43,9 +43,9 @@
     \vskip4ex
     \begin{footnotesize}
 \begin{columns}[t]
-\begin{column}{0.4\textwidth}
+\begin{column}{0.2\textwidth}
 \begin{flushright}
-\vskip -2em
+\vskip -3em
       \begin{minipage}[t]{20ex}
 	\raggedright
 	\emph{Candidati:}\\
@@ -53,13 +53,13 @@
       \end{minipage}
 \end{flushright}
 \end{column}
-\begin{column}{0.2\textwidth}
-\vskip -1em
-	\begin{figure}
-   \includegraphics[width=1.5cm]{images/stemma.pdf}
-\end{figure}
-\end{column}
 \begin{column}{0.4\textwidth}
+\vskip-3ex
+  \begin{figure}
+   \includegraphics[width=2.5cm]{images/stemma.pdf}
+  \end{figure}
+\end{column}
+\begin{column}{0.3\textwidth}
 	\emph{Relatori}\\
 	Prof. Enrico Vicario\\
  \vskip 0.5em
