--- a/Docs/Slides/Slides.tex
+++ b/Docs/Slides/Slides.tex
@@ -96,7 +96,7 @@ per l'amministrazione di attività di trasferimento tecnologico\\}
 
 \frame{\titlepage}
 \input{part1}
-%\input{part2}
+\input{part2}
 \input{part3}
 %\section[Outline]{}
 %\frame{\tableofcontents}
