--- a/Docs/Slides/part2.tex
+++ b/Docs/Slides/part2.tex
@@ -7,6 +7,9 @@
 \begin{itemize}
 \item JBoss AS (Application Server) 7.1
 	\begin{itemize}
+	
+	\vspace{0.5em}
+	
 	\item fornisce l'infrastruttura per consentire l'esecuzione di una web application
 	\end{itemize}
 
@@ -14,11 +17,26 @@
 
 \item Java EE (Java Platform, Enterprise Edition) 6
 	\begin{itemize}
+	
+	\vspace{0.5em}
+	
 	\item piattaforma software per lo sviluppo di applicazioni enterprise
+	
+	\vspace{0.7em}
+	
 	\item comprende varie tecnologie, fra cui:
 		\begin{itemize}
+		
+		\vspace{0.4em}
+		
 		\item JPA (Java Persistence API) 2.0
+		
+		\vspace{0.6em}
+		
 		\item CDI (Contexts and Dependency Injection) 1.0
+		
+		\vspace{0.6em}
+		
 		\item JSF (JavaServer Faces) 2.0
 		\end{itemize}
 		
@@ -43,8 +61,17 @@
 	
 	\item \textsl{Enterprise JavaBeans} (EJB): bean utilizzati per la logica di business o la persistenza
 		\begin{itemize}
+		
+		\vspace{0.5em}
+		
 		\item session bean
+		
+		\vspace{0.3em}
+		
 		\item message-driven bean
+		
+		\vspace{0.3em}
+		
 		\item entity bean
 		\end{itemize}
 	
@@ -78,18 +105,30 @@
 	
 	\vspace{0.7em}
 	
-	\item Il modello più utilizzato all'interno dei database è il \textsl{modello relazionale}
+	\item Database: \textsl{modello relazionale}
 		\begin{itemize}
-		\item le entità sono le \textsl{relazioni}
-		\item sono collegate tra di loro mediante \textsl{chiavi}
+		
+		\vspace{0.4em}
+		
+		\item entità: \textsl{relazioni}
+		
+		\vspace{0.2em}
+		
+		\item collegate tra di loro mediante \textsl{chiavi}
 		\end{itemize}
 		
 	\vspace{0.7em}
 	
-	\item Il modello utilizzato all'interno delle applicazioni Java è il \textsl{modello a oggetti}
+	\item Applicazione Java: \textsl{modello a oggetti}
 		\begin{itemize}
-		\item le entità sono le \textsl{classi}
-		\item sono collegate tra di loro mediante \textsl{riferimenti}
+		
+		\vspace{0.4em}
+		
+		\item entità: \textsl{classi}
+		
+		\vspace{0.2em}
+		
+		\item collegate tra di loro mediante \textsl{riferimenti}
 		\end{itemize}
 	
 	\end{itemize}
