--- a/Jama/bin/src/main/resources/messages.properties
+++ b/Jama/bin/src/main/resources/messages.properties
@@ -77,12 +77,13 @@ notes=Note
 iva=IVA
 turnOver=Fatturato
 totalTurnOver=Totale fatturato
-debtNoteAmount=Note
+debtNoteAmount=Totale delle note di debito
 projectNumber=Nome progetto CIA
 agrType=Tipo
 department=UAR
 wholeAmount=Importo totale
-totalAgreementAmount=Totale imponibile della convenzione
+totalTaxableAgreementAmount=Totale imponibile della convenzione
+totalAgreementAmount=Importo totale della convenzione
 reservedAmount=Totale impegnato
 spentAmount=Totale speso
 taxableAmount=Totale imponibile
@@ -159,6 +160,8 @@ err_invalidDeadline_detail=La data di scadenza non è valida (è precedente alla d
 err_instInvalidDeadline=La data di scadenza non è valida
 err_instInvalidDeadline_detail=La data di scadenza non è valida (è precedente alla data di inizio)
 
+err_instInvalidInstallmentSum=La somma dell'importo delle rate non corrisponde all'importo totale della convenzione
+
 err_passwordMismatch=Le password inserite non corrispondono
 err_invalidPassword=La password inserita non è valida
 err_invalidEmail=Indirizzo email non valido
@@ -173,6 +176,7 @@ err_db=Si è verificato un errore all'interno del database
 
 info_badLogin=Matricola o password errati
 info_badLogin_detail=Matricola o password errati: inserire i valori corretti
+warn_noUser=Non esiste alcun utente con la data matricola
 
 invalidFileSize=Dimensione del file non valida
 invalidFile=File non valido
@@ -213,3 +217,4 @@ companyName=Denominazione
 
 table_share=Quota(tabella)
 
+err_illegalVatNumber=La partita IVA deve consistere di sole cifre
